# openxr-vulkan-gamedev-framework

./: .clang-format  .gitignore  Build-ProjectSetup.Readme.md  CMakeLists.txt  CMakeSettings.json  Controls.md  Readme.md  TypicalRunLogSample.md  readme.md  vscode.code-workspace  vscode.readme.md
outRelease/: openxr-vulkan-gamedev-framework.exe_find_the_executable_at_this_path.md
src/: CMakeLists.txt  Context.cpp  GameData.h  Headset.cpp  Headset.h  Input.cpp  Input.h  Main.cpp  MirrorView.cpp  Pipeline.cpp  Pipeline.h  RenderProcess.cpp  RenderProcess.h  Renderer.cpp  Renderer.h  Util.cpp  Util.h
src/GameData/: GameData.cpp  GameData.h  GameDataId.h  GameDataPool.cpp  GameDataPool.h  MeshData.cpp  MeshData.h  PlayerObject.h
src/GameData/Components/: Bounds.h  GameComponent.cpp  GameComponent.h  Light.cpp  Light.h  Material.h  Model.h  Transform.h
src/GameData/Entities/: GameEntity.cpp  GameEntity.h  GameEntityObject.cpp  GameEntityObject.h
src/OpenXrAndVulkan/: Context.cpp  Context.h  DataBuffer.cpp  DataBuffer.h  Headset.cpp  Headset.h  ImageBuffer.cpp  ImageBuffer.h  MirrorView.cpp  MirrorView.h  Pipeline.cpp  Pipeline.h  RenderProcess.cpp  RenderProcess.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h
src/OpenXrInput/: Input.cpp  Input.h  InputData.h
src/Scripting/: Scripting.hpp
src/Utils/: Util.cpp  Util.h
src/gameMechanics/: GameBehaviour.cpp  GameBehaviour.h  HandsBehaviour.cpp  HandsBehaviour.h  InputTesterBehaviour.cpp  InputTesterBehaviour.h  LocomotionBehaviour.cpp  LocomotionBehaviour.h  WorldObjectsMiscBehaviour.cpp  WorldObjectsMiscBehaviour.h
src/shaders/: Diffuse.vert  DiffuseTransparent.frag  EyeShader.frag  EyeShader.vert  GridGround.frag  GridGround.vert  GridSimple.frag  GridSimple.vert  Ground.frag  Ground.vert  Hands.frag  Hands.vert  Light.frag  Light.vert  LightTentacle.frag  LightTentacle.vert  Sky.frag  Sky.vert  SkyOfChaperone.frag  SkyOfChaperone.vert  TripShader.frag  TripShader.vert  _Lighting.glsl  _LoudNoises.glsl  _ProceduralGeometry.glsl  _Utils.glsl  _VertexProcessing.glsl
